# brux-gdk

./: .gitignore  .gitmodules  .travis.yml  BUILD_ALL.sh  CMakeLists.txt  INSTALL-SteamDeck.md  INSTALL.md  README.md  XYG2.cbp  XYG2.depend  XYG2.layout  XYG2.sln  XYG2.vcproj  audio.cpp  audio.h  binds.cpp  binds.h  build.sh  fileio.h  function list.txt  global.cpp  global.h  graphics.cpp  graphics.h  input.cpp  input.h  issues.txt  libxyg.nut  log.txt  main.cpp  main.h  makefile  makefile_old  maths.cpp  maths.h  meson.build  reference.md  shapes.h  sprite.cpp  sprite.h  (+9 more)
.github/workflows/: gnu_linux.yml  gnu_linux_32.yml  windows.yml
cmake/: FindSDL2_gfx.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake
docs/: actors.md  audio.md  constants.md  fileio.md  graphics.md  index.md  input.md  main.md  maths.md  misc.md  reference.md  sprites.md  text.md  tilemaps.md  tutorials.md
docs/en/: audio.md  constants.md  fileio.md  graphics.md  input.md  main.md  maths.md  misc.md  net.md  shapes.md  sprites.md  text.md  tutorials.md
docs/en/tutorials/: hello-world.md  main-loop.md  multi-files.md  sprites.md
ide/: LICENSE  editorwindow.cpp  editorwindow.h  editorwindow.hpp  install-debian.sh  main.cpp  meson.build  resources.qrc
ide/mime/: application-brux.xml  application-x-brux.xml  text-x-squirrel.xml
ide/syntax/: brux.xml
ide/ui/: editorwindow.ui
rte/: .gitignore  CMakeLists.txt  CMakeSettings.json.example  DEVELOP.md  Phyisics.cpp  XYG_Runtime.cbp  XYG_Runtime.depend  XYG_Runtime.layout  _build.sh  _buildrun.sh  actors.cpp  actors.h  audio.cpp  audio.h  binds.cpp  binds.h  brux  brux-rte.cbp  brux-rte.depend  brux-rte.layout  buildlog.txt  cJSON.c  config.hpp  core.cpp  core.h  cp437b.xpm  cp437e.xpm  cp437g.xpm  cp437r.xpm  cp437w.xpm  emscripten-minimal.html  fileio.cpp  fileio.h  global.cpp  global.h  graphics.cpp  graphics.h  input.cpp  input.h  install-arch.sh  (+27 more)
rte/cmake/: BuildMiniswigWrapper.cmake  FindCURL.cmake  FindDeflate.cmake  FindFLAC.cmake  FindJBIG.cmake  FindLZMA.cmake  FindMPG123.cmake  FindModplug.cmake  FindOGG.cmake  FindOpusFile.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSquirrel.cmake  FindVORBIS.cmake  FindWebP.cmake  Findzstd.cmake  ProvidePhysFS.cmake  ProvideSquirrel.cmake  miniswig.tmp
rte/cmake/squirrel/ex/lib/: libsqstdlib.so.0.0.0
rte/cmake/squirrel/ex/lib/cmake/squirrel/: squirrel-targets-release.cmake  squirrel-targets.cmake
rte/cmake/squirrel_project-prefix/src/squirrel_project-build/lib/: libsqstdlib.so.0.0.0  libsquirrel.so.0.0.0
rte/cmake/squirrel_project-prefix/src/squirrel_project-build/lib/cmake/squirrel/: squirrel-config-version.cmake  squirrel-targets.cmake
rte/cmake/squirrel_project-prefix/tmp/: squirrel_project-cfgcmd.txt
rte/cmake/xylib/: core.nut  shapes.nut  tmx.nut
rte/crossfile/: i386.cross
rte/physfs_project-prefix/src/physfs_project-stamp/: physfs_project-source_dirinfo.txt
rte/physfs_project-prefix/tmp/: physfs_project-cfgcmd.txt  physfs_project-mkdirs.cmake
rte/src/: config.hpp.in
rte/src/api/: api.hpp  audio.cpp  audio.hpp  fileio.cpp  fileio.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  json.cpp  json.hpp  main.cpp  main.hpp  maths.cpp  maths.hpp  sdl.cpp  sdl.hpp  shapes.cpp  shapes.hpp  sprites.cpp  sprites.hpp  text.cpp  text.hpp
rte/src/area_interaction/: area_interaction.cpp
rte/src/audio/: audio.cpp  audio.hpp  audio_none.cpp  audio_sdl2.cpp
rte/src/audio/backend/: audio_null.cpp  audio_null.hpp  audio_sdl2.cpp  audio_sdl2.hpp
rte/src/brux/: actors.cpp  audio.cpp  audio.hpp  binds.cpp  core.cpp  core.hpp  fileio.cpp  fileio.hpp  flop.cpp  flop.hpp  global.cpp  global.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  main.cpp  main.hpp  maths.cpp  maths.hpp  net.cpp  net.hpp  physics.cpp  physics.hpp  shapes.cpp  shapes.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp
rte/src/communication/: communication.cpp  communication.hpp  event_info.hpp
rte/src/math2/: collision_info.hpp  ray2.cpp  ray2.hpp  rectangle2.cpp  rectangle2.hpp  vector2.cpp  vector2.hpp  vector_features.cpp  vector_features.hpp
rte/src/math3/: camera3.hpp  matrix4x4.cpp  matrix4x4.hpp  matrix_multiplication3.cpp  matrix_multiplication3.hpp  mesh3.cpp  mesh3.hpp  ray3.hpp  ray_vs_plane.cpp  ray_vs_plane.hpp  triangle3.hpp  vector3.hpp  vector3_maths.cpp  vector3_maths.hpp  vector4.hpp
rte/src/squirrel/: squirrel_error.cpp  squirrel_error.hpp  wrapper.cpp  wrapper.hpp
rte/src/test/game/: game.cpp  game.hpp
rte/src/test/playground/: asset_manager.cpp  asset_manager.hpp  editor.cpp  editor.h  line_tool.cpp  line_tool.hpp  menu_entry.cpp  menu_entry.hpp  playground.cpp  playground.hpp
rte/src/test/playground/assets/: circle_icon.aseprite  line_icon.aseprite  ray_icon.aseprite
rte/src/test/projection_test/: projection_test.cpp  projection_test.hpp
rte/src/video/: video.cpp  video.hpp
rte/src/video/backend/: video_sdl2.cpp  video_sdl2.hpp
rte/test/: test.nut
rte/test/res/: test2.json
std/: actors.nut
test/: blending.nut  deepclone.nut  drawtile.nut  firefly-line.nut  flop.nut  hittest.nut  ifspeed.nut  linearnoise.nut  mode7.nut  my.nut  platform-tile.nut  platform.nut  polytest.nut  quad.nut  snake.nut  spritestress.nut  staticvars.nut
test/res/: Grass.tsx  test.json  test2.json
test/src/: actors.nut  assets.nut  irc.nut  main.nut  shapes.nut  tilemap.nut
unicode-version/: README.md  actors.cpp  audio.cpp  audio.h  binds.cpp  binds.h  core.cpp  fileio.cpp  global.cpp  graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  main.h  maths.h  physics.cpp  shapes.cpp  sprite.cpp  text.cpp
xylib/: core.nut  tmx.nut
